# zero

./: .gitignore  .gitmodules  README-architecture.md  README.md  primitive.blend  skinning.md
asset/physics/: ammo.wasm.wasm  helloworld.wasm
asset/shader/: depth.fs  (+8 more)
assets/: phys.wasm  spi.wasm  spine-c.wasm  yoga-wasm-esm.wasm  yoga.wasm
dev-server/: app.html  package-lock.json  package.json
emscripten/: compose.yaml
emscripten/spine-runtimes/: AnimationState.c  Atlas.c  CMakeLists.txt  Model.c  Skeleton.c  SkeletonBinary.c
emscripten/spine-runtimes-3.6.53/: CMakeLists.txt  Model.c  SkeletonBinary.c  spi.c
emscripten/spine-runtimes/spine-c-3.6.53/spine-c/include/spine/: Skeleton.h
emscripten/test/src/cmake-proj/: CMakeLists.txt
emscripten/test/src/cmake-proj/sub/: CMakeLists.txt  sub.c
minigame/: .gitignore  README.md  bundling-animation.js  bundling-engine.js  bundling-flex.js  bundling-instancing.js  bundling-phys.js  bundling-shadow.js  bundling-skeleton.js  bundling-skeleton2.js  bundling-skin.js  bundling-spi.js  bundling-spine2.js  bundling-splash.js  bundling-yoga.js  game.js  game.json  package-lock.json  package.json  project.config.json  project.private.config.json  rollup.config.mjs  s.js
minigame-tools/: game.mjs  txt.mjs
native/: README.md
native/core/: Binding.cpp  Binding.hpp  CMakeLists.txt  Log.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  UniqueFunction.hpp  Window.cpp  Window.hpp
native/core/base/: UniqueFunction.hpp
native/core/base/threading/: ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp
native/core/bindings/: Console.cpp  Console.hpp  ImageBitmap.cpp  ImageBitmap.hpp  Loader.cpp  Loader.hpp  Performance.cpp  Performance.hpp  Platform.cpp  Platform.hpp  console.cpp  console.hpp
native/core/bindings/gfx/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  DeviceThread.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  InputAssembler.cpp  InputAssembler.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  Queue.cpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Semaphore.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  commandbuffer.hpp  device.hpp
native/core/gfx/: Device.hpp
native/core/sugars/: sdlsugar.cpp  sdlsugar.hpp  v8sugar.cpp  v8sugar.hpp
native/core/utils/: log.hpp  rw.cpp  rw.hpp  v8sugar.cpp  v8sugar.hpp
native/gfx/android/: CMakeLists.txt
native/gfx/vulkan/: Buffer.cpp  CMakeLists.txt  CommandBuffer.cpp  CommandBufferImpl.hpp  DescriptorSet.cpp  Device.cpp  Framebuffer.cpp  FramebufferImpl.hpp  PipelineLayout.cpp  RenderPass.cpp  RenderPassImpl.hpp  Sampler.cpp  SamplerImpl.hpp  Shader.cpp  ShaderImpl.hpp  SwapchainImpl.hpp  TextureImpl.hpp
native/gfx/vulkan/internal/: DescriptorSetPool.cpp  README.md
native/gfx/vulkan/tests/: triangle.cpp
native/gfx/win/: CMakeLists.txt
native/gfx/win/glslang/: GenericCodeGen.lib  OGLCompiler.lib  OGLCompilerd.lib  OSDependent.lib  OSDependentd.lib  SPIRV.lib  glslang-default-resource-limits.lib  glslang.lib  glslangd.lib
native/main/: Binding.cpp  Binding.hpp  CMakeLists.txt  ImageBitmap.hpp  InspectorChannel.cpp  InspectorChannel.hpp  InspectorClient.cpp  InspectorClient.hpp  Loader.cpp  Loader.hpp  Loop.cpp  Loop.hpp  WebSocket.cpp  WebSocket.hpp  Window.cpp  Window.hpp  env.hpp  events.hpp  log.h
native/main/base/: TaskRunner.hpp  UniqueFunction.hpp  callable.hpp
native/main/base/event/: Emitter.hpp
native/main/base/threading/: SCSP.hpp  Semaphore.cpp  Semaphore.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp
native/main/bg/: CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  Device.hpp  Queue.cpp  Queue.hpp  WebSocket.cpp  WebSocket.hpp
native/main/bindings/: Console.cpp  ImageBitmap.cpp  ImageBitmap.hpp  Loader.cpp  Loader.hpp  Platform.cpp
native/main/bindings/gfx/: Buffer.cpp  Buffer.hpp  Capabilities.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  InputAssembler.cpp  InputAssembler.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  Queue.cpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Semaphore.cpp  Semaphore.hpp  Shader.cpp  Shader.hpp  Swapchain.hpp  Texture.cpp  Texture.hpp  info.hpp
native/main/gfx/: Buffer.hpp  Capabilities.hpp  CommandBuffer.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  Device.hpp  Fence.hpp  Framebuffer.hpp  InputAssembler.hpp  Pipeline.hpp  PipelineLayout.hpp  Queue.hpp  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  Swapchain.hpp  Texture.hpp  constants.cpp  constants.hpp  info.cpp  info.hpp
native/main/internal/: console.cpp  console.hpp  text.cpp  text.hpp
native/main/lws/: lws_config.h
native/main/sugars/: sdlsugar.cpp  sdlsugar.hpp  v8sugar.cpp  v8sugar.hpp
native/main/sugars/internal/v8/: ImportMap.cpp  ImportMap.hpp  Weak.hpp
native/main/swig/: ImageBitmap.i  Loader.i  Loop.i  README.md  WebSocket.i  Window.i  gfx.i  global.i
native/main/swig/Lib/javascript/v8/: javascriptcode.swg  javascriptrun.swg  javascripttypemaps.swg  std_shared_ptr.i
native/main/tests/: v8.cpp  v8.hpp  websockets.cpp  websockets.hpp
native/sdl/win/: CMakeLists.txt
projects/: .gitignore
puttyknife/: README.md  portation.h
puttyknife/phys-wasm/: CMakeLists.txt  callbacks.cpp  compose.yaml
puttyknife/phys/bullet-end/: BoxShape.cpp  CMakeLists.txt  CollisionObject.cpp  CollisionShape.cpp  Quat.cpp  README.md  RigidBody.cpp  Transform.cpp  Vector3.cpp  Vehicle.cpp  World.cpp
puttyknife/phys/bullet-end/private/phys/: type.hpp
puttyknife/spi-wasm/: CMakeLists.txt  README.md  compose.yaml
puttyknife/spine-runtimes-wasm/: CMakeLists.txt  compose.yaml
puttyknife/yoga-wasm/: CMakeLists.txt  NodeContext.hpp  callbacks.cpp  compose.yaml  context.cpp
script/: package-lock.json  package.json  tsconfig.json
(+1491 files in other folders)
